--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <meta name="viewport" content="width=device-width,
                                         initial-scale=1.0" />
         <title>Dropdown</title>
-        <link rel="stylesheet" href="../css/style.css" type="text/css" />
-        <script src="../js/main.js" defer></script>
-    </head>
+        <link rel="stylesheet" href="style.css" type="text/css" />
+        <script type="module" src="main.js" defer></script>
     <body>
         <div class="dropdown">
+  </head>
             <button type="button"
                     id="drop-btn"
                     class="drop-btn">Click
